# ato-cli-pilot

./: .ato-scan.yml  .gitignore  Enter passphrase (empty for no passphrase):  Enter passphrase (empty for no passphrase):.pub  bad_enc.js  ci_report.json  ci_report.md  ci_report.txt  ci_report_oscal.json  ful_report.json  ful_report_oscal.json  local_report.json  local_report.md  local_report.txt  local_report_oscal.json  pyproject.toml  report.json  report.md  report.txt  report_oscal.json  sample_scan.py  test_report_oscal.json
.github/workflows/: ci.yml
ato-cli/: bad.java  bad_code.py  demo.js  report  report.json  report.md  report.txt  result  result.json  result.md  result.txt  sample_code.py
ato-cli/ato_cli/: __init__.py  cli.py  oscal_writer.py
ato-cli/tests/: test_scan.py
ato_cli/: cli.py
ato_scan/: pyvenv.cfg
ato_scan/Scripts/: activate  activate.bat
demo_ac2_sc12_ok/: bad_storage.js  good_app.py
demo_scan/: example_app.py  example_report.json  example_report.md  example_report.txt  example_report_oscal.json
