[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ato-cli"
version = "0.1.0"
description = "ATO CLI pilot"
requires-python = ">=3.9"
dependencies = ["click", "openai>=1.0.0", "pyyaml"]

[project.scripts]
ato-scan = "ato_cli.cli:main"


[tool.setuptools.packages.find]
where = [""]         
include = ["ato_cli*"]